objects/RMA_Analysis__c.object
<CustomObject>
    <description>Object to capture the analytic data for Wafers selected in the RMA request.</description>
    <fields>
        <fullName>Analysis_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Analysis Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Operation__c</fullName>
        <label>Current Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Arrival</fullName>
                </value>
                <value>
                    <fullName>Test Prep</fullName>
                </value>
                <value>
                    <fullName>MFG Test</fullName>
                </value>
                <value>
                    <fullName>TAE</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PFA</fullName>
                </value>
                <value>
                    <fullName>Module Inspection</fullName>
                </value>
                <value>
                    <fullName>PFA - Fab 9 WWAS</fullName>
                </value>
                <value>
                    <fullName>PFA - Fab 9 CFA</fullName>
                </value>
                <value>
                    <fullName>PFA - Fab 10</fullName>
                </value>
                <value>
                    <fullName>WFT</fullName>
                </value>
                <value>
                    <fullName>ILT</fullName>
                </value>
                <value>
                    <fullName>Outsource_Analysis</fullName>
                </value>
                <value>
                    <fullName>MFT</fullName>
                </value>
                <value>
                    <fullName>Wafer Inspection</fullName>
                </value>
                <value>
                    <fullName>Outsource Analysis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Fail_Source__c</fullName>
        <label>Customer Fail Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>ORT</fullName>
                </value>
                <value>
                    <fullName>Visual/Mechanical</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Wafer Test</fullName>
                </value>
                <value>
                    <fullName>Module Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <label>Customer ID#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>RMA__r.Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_from_Operation__c</fullName>
        <label>Date from Operation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_Operation__c</fullName>
        <label>Date to Operation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ECID__c</fullName>
        <label>ECID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <label>End Customer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Report_Date__c</fullName>
        <label>Final Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Root_Cause__c</fullName>
        <label>Final Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Application/Spec Violation (Client)</fullName>
                </value>
                <value>
                    <fullName>BA/Laminate Issue</fullName>
                </value>
                <value>
                    <fullName>Board Assembly</fullName>
                </value>
                <value>
                    <fullName>Client EOL</fullName>
                </value>
                <value>
                    <fullName>Fail/No Action</fullName>
                </value>
                <value>
                    <fullName>Fail/Action</fullName>
                </value>
                <value>
                    <fullName>NDF/No Action</fullName>
                </value>
                <value>
                    <fullName>NDF/Actioned</fullName>
                </value>
                <value>
                    <fullName>NDF/Actioned No Resolution</fullName>
                </value>
                <value>
                    <fullName>NDF/Returned to Customer</fullName>
                </value>
                <value>
                    <fullName>Unable to Test</fullName>
                </value>
                <value>
                    <fullName>VCUT</fullName>
                </value>
                <value>
                    <fullName>Wrong Part Returned</fullName>
                </value>
                <value>
                    <fullName>Process/Design</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GF_ID__c</fullName>
        <label>GF ID#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interim_Report_Date__c</fullName>
        <label>Interim Report Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MFG_Test_Result__c</fullName>
        <label>MFG Test Result</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Lot_Number__c</fullName>
        <label>Module Lot Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE(MONTH(DATEVALUE(Date_Received__c)),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_TAT__c</fullName>
        <formula>(CASE(MOD( DATEVALUE(Date_Received__c) - DATE(1985,6,24),7), 
0 , CASE( MOD( DATEVALUE( Interim_Report_Date__c ) - DATEVALUE(Date_Received__c),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE( Interim_Report_Date__c ) - DATEVALUE(Date_Received__c),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE( Interim_Report_Date__c ) - DATEVALUE(Date_Received__c),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE( Interim_Report_Date__c ) - DATEVALUE(Date_Received__c),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE( Interim_Report_Date__c ) - DATEVALUE(Date_Received__c),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE( Interim_Report_Date__c ) - DATEVALUE(Date_Received__c),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE( Interim_Report_Date__c ) - DATEVALUE(Date_Received__c),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( DATEVALUE( Interim_Report_Date__c ) - DATEVALUE(Date_Received__c))/7)*5) 
)-1+(Interim_Report_Date__c - Date_Received__c-(DATEVALUE( Interim_Report_Date__c) - DATEVALUE(Date_Received__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall TAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PFA_JOB__c</fullName>
        <label>PFA JOB#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <formula>RMA_Return_Invoice__r.Device__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Form_Factor__c</fullName>
        <formula>Text(RMA__r.RMA_By__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RMA Form Factor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Return_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA Return Invoice</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RMA_Return_Invoice__c.RMA__c</field>
                <operation>equals</operation>
                <valueField>$Source.RMA__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RMA_Return_Invoice__c</referenceTo>
        <relationshipName>RMA_Wafer_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6 AND 7)</booleanFilter>
            <filterItems>
                <field>RMA__c.Disposition_of_Wafers__c</field>
                <operation>equals</operation>
                <value>Return to GF</value>
            </filterItems>
            <filterItems>
                <field>RMA__c.Acknowledged_Wafer_Return__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>RMA__c.Disposition_of_Wafers__c</field>
                <operation>equals</operation>
                <value>To Scrap at Customer Site</value>
            </filterItems>
            <filterItems>
                <field>RMA__c.Acknowledged_Wafer_Scrap__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>RMA__c.Disposition_of_Wafers__c</field>
                <operation>equals</operation>
                <value>Return to GF and to Scrap at Customer Site</value>
            </filterItems>
            <filterItems>
                <field>RMA__c.Acknowledged_Wafer_Return__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>RMA__c.Acknowledged_Wafer_Scrap__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RMA__c</referenceTo>
        <relationshipName>RMA_Wafer_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Fail__c</fullName>
        <label>Reason for Fail</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Released_MFG_Lot_Number__c</fullName>
        <label>Released MFG Lot Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CU14</fullName>
                </value>
                <value>
                    <fullName>CU32</fullName>
                </value>
                <value>
                    <fullName>CU45</fullName>
                </value>
                <value>
                    <fullName>CU65</fullName>
                </value>
                <value>
                    <fullName>CU08</fullName>
                </value>
                <value>
                    <fullName>CU11</fullName>
                </value>
                <value>
                    <fullName>SA27</fullName>
                </value>
                <value>
                    <fullName>14HP</fullName>
                </value>
                <value>
                    <fullName>14LPP</fullName>
                </value>
                <value>
                    <fullName>14SOI</fullName>
                </value>
                <value>
                    <fullName>1K5PAXE</fullName>
                </value>
                <value>
                    <fullName>1KW5PAE</fullName>
                </value>
                <value>
                    <fullName>22SOI</fullName>
                </value>
                <value>
                    <fullName>BICM5S0</fullName>
                </value>
                <value>
                    <fullName>BIMOSP6</fullName>
                </value>
                <value>
                    <fullName>BIMSP6X</fullName>
                </value>
                <value>
                    <fullName>BMSP6C9</fullName>
                </value>
                <value>
                    <fullName>CIMG7HY</fullName>
                </value>
                <value>
                    <fullName>CIMG7SF</fullName>
                </value>
                <value>
                    <fullName>CIMG7ST</fullName>
                </value>
                <value>
                    <fullName>CM10LPL</fullName>
                </value>
                <value>
                    <fullName>CMHV7SF</fullName>
                </value>
                <value>
                    <fullName>CMMS6SF</fullName>
                </value>
                <value>
                    <fullName>CMOS6SF</fullName>
                </value>
                <value>
                    <fullName>CMOS7SF</fullName>
                </value>
                <value>
                    <fullName>CMOS90B</fullName>
                </value>
                <value>
                    <fullName>CMOS90S</fullName>
                </value>
                <value>
                    <fullName>CMOS9SF</fullName>
                </value>
                <value>
                    <fullName>CMRF6SF</fullName>
                </value>
                <value>
                    <fullName>CMRF7SF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_File__c</fullName>
        <label>Test File</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>RMA Analysis</label>
    <listViews>
        <fullName>APQE_RMA_Returns_Active_View</fullName>
        <columns>RMA__c</columns>
        <columns>Customer_ID__c</columns>
        <columns>NAME</columns>
        <columns>Current_Operation__c</columns>
        <columns>Analysis_Complete__c</columns>
        <columns>End_Customer__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Released_MFG_Lot_Number__c</columns>
        <columns>Reason_for_Fail__c</columns>
        <columns>MFG_Test_Result__c</columns>
        <columns>Final_Root_Cause__c</columns>
        <columns>Technology__c</columns>
        <columns>GF_ID__c</columns>
        <columns>Overall_TAT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Group__c</field>
            <operation>contains</operation>
            <value>ASIC</value>
        </filters>
        <filters>
            <field>Analysis_Complete__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>APQE RMA Returns Active View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASIC_CQE_Returns_Overall_View</fullName>
        <columns>RMA__c</columns>
        <columns>Customer_ID__c</columns>
        <columns>NAME</columns>
        <columns>Current_Operation__c</columns>
        <columns>Analysis_Complete__c</columns>
        <columns>End_Customer__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Released_MFG_Lot_Number__c</columns>
        <columns>Reason_for_Fail__c</columns>
        <columns>MFG_Test_Result__c</columns>
        <columns>Final_Root_Cause__c</columns>
        <columns>Technology__c</columns>
        <columns>GF_ID__c</columns>
        <columns>Overall_TAT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Group__c</field>
            <operation>contains</operation>
            <value>ASIC</value>
        </filters>
        <label>APQE RMA Returns Overall View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>RMA__c</columns>
        <columns>NAME</columns>
        <columns>Product_Name__c</columns>
        <columns>GF_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Current_Operation_Awaiting_Arrival_ASIC</fullName>
        <columns>RMA__c</columns>
        <columns>NAME</columns>
        <columns>End_Customer__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Reason_for_Fail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Group__c</field>
            <operation>contains</operation>
            <value>ASIC</value>
        </filters>
        <filters>
            <field>Current_Operation__c</field>
            <operation>equals</operation>
            <value>Awaiting Arrival</value>
        </filters>
        <label>Current Operation: Awaiting Arrival ASIC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Current_Operation_MFG_Test</fullName>
        <columns>RMA__c</columns>
        <columns>NAME</columns>
        <columns>End_Customer__c</columns>
        <columns>Product_Name__c</columns>
        <columns>GF_ID__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Technology__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Operation__c</field>
            <operation>equals</operation>
            <value>MFG Test</value>
        </filters>
        <label>Current Operation: MFG Test</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Current_Operation_Module_Inspection</fullName>
        <columns>NAME</columns>
        <columns>RMA__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Current_Operation__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Technology__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Operation__c</field>
            <operation>equals</operation>
            <value>Module Inspection</value>
        </filters>
        <label>Current Operation: Module Inspection</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Current_Operation_PE</fullName>
        <columns>NAME</columns>
        <columns>RMA__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Current_Operation__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Technology__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Operation__c</field>
            <operation>equals</operation>
            <value>PE</value>
        </filters>
        <label>Current Operation: PE</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Current_Operation_PFA</fullName>
        <columns>NAME</columns>
        <columns>RMA__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Current_Operation__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Technology__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Operation__c</field>
            <operation>equals</operation>
            <value>PFA</value>
        </filters>
        <label>Current Operation: PFA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Current_Operation_TAE</fullName>
        <columns>NAME</columns>
        <columns>RMA__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Current_Operation__c</columns>
        <columns>GF_ID__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Technology__c</columns>
        <columns>Analysis_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Operation__c</field>
            <operation>equals</operation>
            <value>TAE</value>
        </filters>
        <label>Current Operation: TAE</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Current_Operation_Test_Prep</fullName>
        <columns>RMA__c</columns>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Current_Operation__c</columns>
        <columns>GF_ID__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Technology__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Operation__c</field>
            <operation>equals</operation>
            <value>Test Prep</value>
        </filters>
        <label>Current Operation: Test Prep</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Foundry_Customer_Quality</fullName>
        <columns>Customer_Name__c</columns>
        <columns>RMA__c</columns>
        <columns>NAME</columns>
        <columns>PFA_JOB__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Customer_ID__c</columns>
        <columns>Customer_Fail_Source__c</columns>
        <columns>Technology__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Group__c</field>
            <operation>contains</operation>
            <value>Foundry</value>
        </filters>
        <label>Foundry Customer Quality</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>WA-{00000}</displayFormat>
        <label>RMA Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMA Analysis</pluralLabel>
    <recordTypes>
        <fullName>ASICs</fullName>
        <active>true</active>
        <description>ASICs Business</description>
        <label>ASICs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Foundry</fullName>
        <active>true</active>
        <description>Foundry Business</description>
        <label>Foundry</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>